test/corpus/comment.txt
==================
Comment Basic
==================

{% comment %}
This is ignored
{% endcomment %}

---

(template
  (content)
  (comment_group
    (comment_block
      (comment_tag)
      (comment_content))
    (endcomment_tag))
  (content))

==================
Comment Empty
==================

{% comment %}{% endcomment %}

---

(template
  (content)
  (comment_group
    (comment_block
      (comment_tag))
    (endcomment_tag))
  (content))

==================
Comment With Note
==================

{% comment "why" %}
This is ignored
{% endcomment %}

---

(template
  (content)
  (comment_group
    (comment_block
      (comment_tag
        (string))
      (comment_content))
    (endcomment_tag))
  (content))

==================
Comment Ignores Tag Like Text
==================

{% comment %}
Contains {% if x %} tag-like text
{% endcomment %}

---

(template
  (content)
  (comment_group
    (comment_block
      (comment_tag)
      (comment_content))
    (endcomment_tag))
  (content))
